--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.aop.proxy-target-class=true
 # DataSource settings: set here your own configurations for the database
 # connection. In this example we have "recursos_humanos" as database name and
 # "root" as username and password.
-spring.datasource.url=jdbc:mysql://localhost:3308/dv-ds-20231c-g4
+spring.datasource.url=jdbc:mysql://localhost:3306/dv-ds-20231c-g4
 spring.datasource.username=root
 spring.datasource.password=1234
 # Keep the connection alive if idle for a long time (needed in production)
@@ -32,4 +32,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # Enable all endpoints
 management.endpoints.web.exposure.include=*
 #Spring serializer
-spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jackson.serialization.fail-on-empty-beans=false
+#spring.datasource.tomcat.testWhileIdle = true
+#spring.datasource.tomcat.timeBetweenEvictionRunsMillis = 60000
+#spring.datasource.tomcat.validationQuery = SELECT 1
